--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>hello_world</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Pegasus App</title>
+  <!-- <link rel="manifest" href="manifest.json"> -->
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
