--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -27,12 +28,16 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>Pegasus App</title>
   <!-- <link rel="manifest" href="manifest.json"> -->
 </head>
+
 <body>
+  <div style="position: fixed; bottom: 0; right: 0; background: yellow; color: black; z-index: 9999; padding: 5px;">v2
+    (No PWA)</div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 </html>
